[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsix-revshell"
version = "0.1.0"
description = "Generate a reverse shell packaged as a VS Code extension (.vsix)"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["security", "redteam", "pentest", "vscode", "vsix", "reverse-shell"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
vsix-revshell = "vsix_revshell:main"

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools]
py-modules = ["vsix_revshell"]
